011/mml_parser.output
Terminals unused in grammar

    tREAD


Grammar

    0 $accept: file $end

    1 file: vardecs tBEGIN vardecs list tEND
    2     | vardecs tBEGIN vardecs tEND
    3     | vardecs tBEGIN list tEND
    4     | vardecs tBEGIN tEND
    5     | vardecs
    6     | tBEGIN vardecs list tEND
    7     | tBEGIN vardecs tEND
    8     | tBEGIN list tEND
    9     | tBEGIN tEND
   10     | ε

   11 list: stmt
   12     | list stmt

   13 stmt: expr ';'
   14     | exprs tPRINT
   15     | exprs tPRINTLN
   16     | tSTOP tINTEGER ';'
   17     | tSTOP ';'
   18     | tNEXT tINTEGER ';'
   19     | tNEXT ';'
   20     | return
   21     | tIF '(' expr ')' stmt
   22     | tIF '(' expr ')' stmt iffalse
   23     | tWHILE '(' expr ')' stmt
   24     | block

   25 iffalse: tELSE stmt
   26        | tIFX '(' expr ')' stmt
   27        | tIFX '(' expr ')' stmt iffalse

   28 expr: '(' expr ')'
   29     | '[' expr ']'
   30     | '+' expr
   31     | '-' expr
   32     | lval '?'
   33     | expr '*' expr
   34     | expr '/' expr
   35     | expr '%' expr
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '<' expr
   39     | expr '>' expr
   40     | expr tLE expr
   41     | expr tGE expr
   42     | expr tEQ expr
   43     | expr tNE expr
   44     | tNOT expr
   45     | expr tAND expr
   46     | expr tOR expr
   47     | lval '=' expr
   48     | tINTEGER
   49     | tREAL
   50     | string
   51     | tNULL
   52     | tSIZEOF '(' expr ')'
   53     | tINPUT
   54     | lval
   55     | definition
   56     | call

   57 exprs: expr
   58      | exprs ',' expr

   59 vardec: tFOREIGN data_type tIDENTIFIER '=' expr ';'
   60       | tFOREIGN data_type tIDENTIFIER ';'
   61       | tFORWARD data_type tIDENTIFIER ';'
   62       | tPUBLIC data_type tIDENTIFIER '=' expr ';'
   63       | tPUBLIC data_type tIDENTIFIER ';'
   64       | tPUBLIC tIDENTIFIER '=' expr ';'
   65       | data_type tIDENTIFIER '=' expr ';'
   66       | data_type tIDENTIFIER ';'

   67 vardecs: vardec
   68        | vardecs vardec

   69 data_type: tTYPE_INT
   70          | tTYPE_REAL
   71          | tTYPE_STRING
   72          | tTYPE_VOID
   73          | tTYPE_AUTO
   74          | '[' data_type ']'
   75          | func_type

   76 func_type: output_type '<' var_types '>'
   77          | output_type '<' '>'

   78 output_type: data_type

   79 var_types: data_type
   80          | var_types ',' data_type

   81 lval: tIDENTIFIER
   82     | expr '[' expr ']'

   83 return: tRETURN ';'
   84       | tRETURN expr ';'

   85 block: '{' vardecs list '}'
   86      | '{' list '}'
   87      | '{' vardecs '}'
   88      | '{' '}'

   89 call: expr '(' exprs ')'
   90     | expr '(' ')'
   91     | '@' '(' exprs ')'
   92     | '@' '(' ')'

   93 definition: '(' vars ')' tARROW data_type block
   94           | '(' ')' tARROW data_type block

   95 vars: var
   96     | vars ',' var

   97 var: data_type tIDENTIFIER

   98 string: tSTRING
   99       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 35
    '(' (40) 21 22 23 26 27 28 52 89 90 91 92 93 94
    ')' (41) 21 22 23 26 27 28 52 89 90 91 92 93 94
    '*' (42) 33
    '+' (43) 30 36
    ',' (44) 58 80 96
    '-' (45) 31 37
    '/' (47) 34
    ';' (59) 13 16 17 18 19 59 60 61 62 63 64 65 66 83 84
    '<' (60) 38 76 77
    '=' (61) 47 59 62 64 65
    '>' (62) 39 76 77
    '?' (63) 32
    '@' (64) 91 92
    '[' (91) 29 74 82
    ']' (93) 29 74 82
    '{' (123) 85 86 87 88
    '}' (125) 85 86 87 88
    error (256)
    tINTEGER <i> (258) 16 18 48
    tREAL <d> (259) 49
    tIDENTIFIER <s> (260) 59 60 61 62 63 64 65 66 81 97
    tSTRING <s> (261) 98 99
    tWHILE (262) 23
    tIF (263) 21 22
    tPRINT (264) 14
    tPRINTLN (265) 15
    tREAD (266)
    tBEGIN (267) 1 2 3 4 6 7 8 9
    tEND (268) 1 2 3 4 6 7 8 9
    tSIZEOF (269) 52
    tNULL (270) 51
    tINPUT (271) 53
    tRETURN (272) 83 84
    tSTOP (273) 16 17
    tNEXT (274) 18 19
    tARROW (275) 93 94
    tTYPE_STRING (276) 71
    tTYPE_INT (277) 69
    tTYPE_REAL (278) 70
    tTYPE_AUTO (279) 73
    tTYPE_VOID (280) 72
    tPUBLIC (281) 62 63 64
    tFOREIGN (282) 59 60
    tFORWARD (283) 61
    tELSE (284) 25
    tIFX (285) 26 27
    tAND (286) 45
    tOR (287) 46
    tNOT (288) 44
    tEQ (289) 42
    tNE (290) 43
    tGE (291) 41
    tLE (292) 40
    tUNARY (293)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    file <sequence> (58)
        on left: 1 2 3 4 5 6 7 8 9 10
        on right: 0
    list <sequence> (59)
        on left: 11 12
        on right: 1 3 6 8 12 85 86
    stmt <node> (60)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 11 12 21 22 23 25 26 27
    iffalse <node> (61)
        on left: 25 26 27
        on right: 22 27
    expr <expression> (62)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 13 21 22 23 26 27 28 29 30 31 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 52 57 58 59 62 64 65 82 84 89 90
    exprs <sequence> (63)
        on left: 57 58
        on right: 14 15 58 89 91
    vardec <node> (64)
        on left: 59 60 61 62 63 64 65 66
        on right: 67 68
    vardecs <sequence> (65)
        on left: 67 68
        on right: 1 2 3 4 5 6 7 68 85 87
    data_type <type> (66)
        on left: 69 70 71 72 73 74 75
        on right: 59 60 61 62 63 65 66 74 78 79 80 93 94 97
    func_type <type> (67)
        on left: 76 77
        on right: 75
    output_type <funcs> (68)
        on left: 78
        on right: 76 77
    var_types <funcs> (69)
        on left: 79 80
        on right: 76 80
    lval <lvalue> (70)
        on left: 81 82
        on right: 32 47 54
    return <node> (71)
        on left: 83 84
        on right: 20
    block <blk> (72)
        on left: 85 86 87 88
        on right: 24 93 94
    call <expression> (73)
        on left: 89 90 91 92
        on right: 56
    definition <expression> (74)
        on left: 93 94
        on right: 55
    vars <sequence> (75)
        on left: 95 96
        on right: 93 96
    var <node> (76)
        on left: 97
        on right: 95 96
    string <s> (77)
        on left: 98 99
        on right: 50 99


State 0

    0 $accept: • file $end

    tBEGIN        shift, and go to state 1
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tFORWARD      shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 10 (file)

    file         go to state 11
    vardec       go to state 12
    vardecs      go to state 13
    data_type    go to state 14
    func_type    go to state 15
    output_type  go to state 16


State 1

    6 file: tBEGIN • vardecs list tEND
    7     | tBEGIN • vardecs tEND
    8     | tBEGIN • list tEND
    9     | tBEGIN • tEND

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tWHILE        shift, and go to state 21
    tIF           shift, and go to state 22
    tEND          shift, and go to state 23
    tSIZEOF       shift, and go to state 24
    tNULL         shift, and go to state 25
    tINPUT        shift, and go to state 26
    tRETURN       shift, and go to state 27
    tSTOP         shift, and go to state 28
    tNEXT         shift, and go to state 29
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tFORWARD      shift, and go to state 9
    '('           shift, and go to state 30
    '['           shift, and go to state 31
    tNOT          shift, and go to state 32
    '+'           shift, and go to state 33
    '-'           shift, and go to state 34
    '{'           shift, and go to state 35
    '@'           shift, and go to state 36

    list         go to state 37
    stmt         go to state 38
    expr         go to state 39
    exprs        go to state 40
    vardec       go to state 12
    vardecs      go to state 41
    data_type    go to state 14
    func_type    go to state 15
    output_type  go to state 16
    lval         go to state 42
    return       go to state 43
    block        go to state 44
    call         go to state 45
    definition   go to state 46
    string       go to state 47


State 2

   71 data_type: tTYPE_STRING •

    $default  reduce using rule 71 (data_type)


State 3

   69 data_type: tTYPE_INT •

    $default  reduce using rule 69 (data_type)


State 4

   70 data_type: tTYPE_REAL •

    $default  reduce using rule 70 (data_type)


State 5

   73 data_type: tTYPE_AUTO •

    $default  reduce using rule 73 (data_type)


State 6

   72 data_type: tTYPE_VOID •

    $default  reduce using rule 72 (data_type)


State 7

   62 vardec: tPUBLIC • data_type tIDENTIFIER '=' expr ';'
   63       | tPUBLIC • data_type tIDENTIFIER ';'
   64       | tPUBLIC • tIDENTIFIER '=' expr ';'

    tIDENTIFIER   shift, and go to state 48
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '['           shift, and go to state 10

    data_type    go to state 49
    func_type    go to state 15
    output_type  go to state 16


State 8

   59 vardec: tFOREIGN • data_type tIDENTIFIER '=' expr ';'
   60       | tFOREIGN • data_type tIDENTIFIER ';'

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '['           shift, and go to state 10

    data_type    go to state 50
    func_type    go to state 15
    output_type  go to state 16


State 9

   61 vardec: tFORWARD • data_type tIDENTIFIER ';'

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '['           shift, and go to state 10

    data_type    go to state 51
    func_type    go to state 15
    output_type  go to state 16


State 10

   74 data_type: '[' • data_type ']'

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '['           shift, and go to state 10

    data_type    go to state 52
    func_type    go to state 15
    output_type  go to state 16


State 11

    0 $accept: file • $end

    $end  shift, and go to state 53


State 12

   67 vardecs: vardec •

    $default  reduce using rule 67 (vardecs)


State 13

    1 file: vardecs • tBEGIN vardecs list tEND
    2     | vardecs • tBEGIN vardecs tEND
    3     | vardecs • tBEGIN list tEND
    4     | vardecs • tBEGIN tEND
    5     | vardecs •
   68 vardecs: vardecs • vardec

    tBEGIN        shift, and go to state 54
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    tPUBLIC       shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tFORWARD      shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 5 (file)

    vardec       go to state 55
    data_type    go to state 14
    func_type    go to state 15
    output_type  go to state 16


State 14

   65 vardec: data_type • tIDENTIFIER '=' expr ';'
   66       | data_type • tIDENTIFIER ';'
   78 output_type: data_type •

    tIDENTIFIER  shift, and go to state 56

    $default  reduce using rule 78 (output_type)


State 15

   75 data_type: func_type •

    $default  reduce using rule 75 (data_type)


State 16

   76 func_type: output_type • '<' var_types '>'
   77          | output_type • '<' '>'

    '<'  shift, and go to state 57


State 17

   48 expr: tINTEGER •

    $default  reduce using rule 48 (expr)


State 18

   49 expr: tREAL •

    $default  reduce using rule 49 (expr)


State 19

   81 lval: tIDENTIFIER •

    $default  reduce using rule 81 (lval)


State 20

   98 string: tSTRING •

    $default  reduce using rule 98 (string)


State 21

   23 stmt: tWHILE • '(' expr ')' stmt

    '('  shift, and go to state 58


State 22

   21 stmt: tIF • '(' expr ')' stmt
   22     | tIF • '(' expr ')' stmt iffalse

    '('  shift, and go to state 59


State 23

    9 file: tBEGIN tEND •

    $default  reduce using rule 9 (file)


State 24

   52 expr: tSIZEOF • '(' expr ')'

    '('  shift, and go to state 60


State 25

   51 expr: tNULL •

    $default  reduce using rule 51 (expr)


State 26

   53 expr: tINPUT •

    $default  reduce using rule 53 (expr)


State 27

   83 return: tRETURN • ';'
   84       | tRETURN • expr ';'

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tSIZEOF      shift, and go to state 24
    tNULL        shift, and go to state 25
    tINPUT       shift, and go to state 26
    '('          shift, and go to state 30
    '['          shift, and go to state 61
    tNOT         shift, and go to state 32
    '+'          shift, and go to state 33
    '-'          shift, and go to state 34
    ';'          shift, and go to state 62
    '@'          shift, and go to state 36

    expr        go to state 63
    lval        go to state 42
    call        go to state 45
    definition  go to state 46
    string      go to state 47


State 28

   16 stmt: tSTOP • tINTEGER ';'
   17     | tSTOP • ';'

    tINTEGER  shift, and go to state 64
    ';'       shift, and go to state 65


State 29

   18 stmt: tNEXT • tINTEGER ';'
   19     | tNEXT • ';'

    tINTEGER  shift, and go to state 66
    ';'       shift, and go to state 67


State 30

   28 expr: '(' • expr ')'
   93 definition: '(' • vars ')' tARROW data_type block
   94           | '(' • ')' tARROW data_type block

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tSIZEOF       shift, and go to state 24
    tNULL         shift, and go to state 25
    tINPUT        shift, and go to state 26
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '('           shift, and go to state 30
    ')'           shift, and go to state 68
    '['           shift, and go to state 31
    tNOT          shift, and go to state 32
    '+'           shift, and go to state 33
    '-'           shift, and go to state 34
    '@'           shift, and go to state 36

    expr         go to state 69
    data_type    go to state 70
    func_type    go to state 15
    output_type  go to state 16
    lval         go to state 42
    call         go to state 45
    definition   go to state 46
    vars         go to state 71
    var          go to state 72
    string       go to state 47


State 31

   29 expr: '[' • expr ']'
   74 data_type: '[' • data_type ']'

    tINTEGER      shift, and go to state 17
    tREAL         shift, and go to state 18
    tIDENTIFIER   shift, and go to state 19
    tSTRING       shift, and go to state 20
    tSIZEOF       shift, and go to state 24
    tNULL         shift, and go to state 25
    tINPUT        shift, and go to state 26
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_AUTO    shift, and go to state 5
    tTYPE_VOID    shift, and go to state 6
    '('           shift, and go to state 30
    '['           shift, and go to state 31
    tNOT          shift, and go to state 32
    '+'           shift, and go to state 33
    '-'           shift, and go to state 34
    '@'           shift, and go to state 36

    expr         go to state 73
    data_type    go to state 52
    func_type    go to state 15
    output_type  go to state 16
    lval         go to state 42
    call         go to state 45
    definition   go to state 46
    string       go to state 47


State 32

   44 expr: tNOT • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tSIZEOF      shift, and go to state 24
    tNULL        shift, and go to state 25
    tINPUT       shift, and go to state 26
    '('          shift, and go to state 30
    '['          shift, and go to state 61
    tNOT         shift, and go to state 32
    '+'          shift, and go to state 33
    '-'          shift, and go to state 34
    '@'          shift, and go to state 36

    expr        go to state 74
    lval        go to state 42
    call        go to state 45
    definition  go to state 46
    string      go to state 47


State 33

   30 expr: '+' • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tSIZEOF      shift, and go to state 24
    tNULL        shift, and go to state 25
    tINPUT       shift, and go to state 26
    '('          shift, and go to state 30
    '['          shift, and go to state 61
    tNOT         shift, and go to state 32
    '+'          shift, and go to state 33
    '-'          shift, and go to state 34
    '@'          shift, and go to state 36

    expr        go to state 75
    lval        go to state 42
    call        go to state 45
    definition  go to state 46
    string      go to state 47


State 34

   31 expr: '-' • expr

    tINTEGER     shift, and go to state 17
    tREAL        shift, and go to state 18
    tIDENTIFIER  shift, and go to state 19
    tSTRING      shift, and go to state 20
    tSIZEOF      shift, and go to state 24
    tNULL        shift, and go to state 25
    tINPUT       shift, and go to state 26
    '('          shift, and go to state 30
    '['          shift, and go to state 61
    tNOT         shift, and go to state 32
    '+'          shift, and go to state 33
    '-'          shift, and go to state 34
    '@'          shift, and go to state 36

    expr        go to state 76
    lval        go to state 42
    call        go to state 45
    definition  go to state 46
    string      go to state 47


State 35

   85 block: '{' • vardecs list '}'
   86      | '{' • list '}'
   87      | '{' • vardecs '}'
   88      | '{' • '}'
